<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/middle_linear_layout"
        android:layout_width="0dp"
        android:layout_height="922dp"
        android:layout_marginEnd="111dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear_layout_left"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_right">


        <TextView
            android:id="@+id/criteria1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/criteria1"
            android:textSize="35sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:scaleX="2"
            android:scaleY="2"
            android:textOff="@string/no"
            android:textOn="@string/yes" />


        <TextView
            android:id="@+id/criteria2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/criteria2"
            android:textSize="35sp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:scaleX="2"
            android:scaleY="2"
            android:textOff="@string/no"
            android:textOn="@string/yes" />


        <TextView
            android:id="@+id/criteria3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/criteria3"
            android:textSize="35sp" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:scaleX="2"
            android:scaleY="2"
            android:textOff="@string/no"
            android:textOn="@string/yes" />


        <TextView
            android:id="@+id/criteria4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/criteria4"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/value4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/zero"
            android:textSize="35sp" />


        <TextView
            android:id="@+id/criteria5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/criteria5"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/value5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/zero"
            android:textSize="35sp" />


        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="top|start"
            android:hint="Summary"
            android:lines="10"
            android:maxLines="10"
            android:minLines="8"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textSize="13sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button4plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="150dp"
            android:layout_marginRight="20dp"
            android:text="@string/plus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />

        <Button
            android:id="@+id/button5plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/plus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/middle_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button4minus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:text="@string/minus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />

        <Button
            android:id="@+id/button5minus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/minus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>