<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SandstormScout">


    <LinearLayout
        android:id="@+id/linearLayoutMiddle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear_layout_left"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/criteria1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/normalScoutSandstormCriteria1"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switch1Sandstorm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <TextView
            android:id="@+id/criteria2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/normalScoutSandstormCriteria2"
            android:textSize="25sp" />

        <Switch
            android:id="@+id/switch2Sandstorm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <TextView
            android:id="@+id/criteria3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/normalScoutSandstormCriteria3"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/value3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/zero"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/criteria4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/normalScoutSandstormCriteria4"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/value4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/zero"
            android:textSize="25sp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/middle_linear_layout"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button3plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="290dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/plus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />

        <Button
            android:id="@+id/button4plus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/plus"
            android:textSize="@dimen/place_autocomplete_powered_by_google_height" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/middle_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/button3minus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="290dp"
            android:layout_marginBottom="50dp"
            android:text="@string/minus"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4minus"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/minus"
            android:textSize="20sp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>