<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neelk.robotics.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/sgnup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="13dp"
        android:text="@string/sgnup"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/textViewForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="1dp"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/sgnup"
        app:layout_constraintStart_toStartOf="@+id/sgnup"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="304dp"
        android:layout_height="0dp"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="502dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="291dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/forgotPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sgnup"
        tools:text="@string/forgotPassword" />

    <ImageView
        android:id="@+id/firebotsLogo"
        android:layout_width="305dp"
        android:layout_height="319dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/firebotslogo" />

</android.support.constraint.ConstraintLayout>
